--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div id="app"></div>
   <script src="https://sdk.amazonaws.com/js/aws-sdk-2.62.0.min.js"></script>
-  <script src="/dist/build.js"></script>
+  <script src="./dist/build.js"></script>
 </body>
 
 </html>
